--- a/w3/directive/cart/cart.html
+++ b/w3/directive/cart/cart.html
@@ -1,2 +1,3 @@
 <button type="button" class="btn btn-primary" ng-click="vm.openCart()">Abrir carrito</button>
 <button type="button" class="btn btn-primary" ng-click="vm.deleteCart()">Eliminar carrito</button>
+<button type="button" class="btn btn-primary" ng-click="vm.addProduct()">Agregar producto</button>
