mejora con factory

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="w3/directive/cart/cart_module.js"></script>
 	<script type="text/javascript" src="w3/directive/cart/cart_directive.js"></script>
 	<script type="text/javascript" src="w3/directive/cart/cart_controller.js"></script>
+	<script type="text/javascript" src="w3/directive/cart/cart_factory.js"></script>
 
 	<title>Lanani - Tienda Virtual</title>
 </head>
