--- a/w3/directive/cart/cart.html
+++ b/w3/directive/cart/cart.html
@@ -1,4 +1,4 @@
 <button type="button" class="btn btn-primary" ng-click="vm.openCart()">Abrir carrito</button>
 <button type="button" class="btn btn-primary" ng-click="vm.deleteCart()">Eliminar carrito</button>
-<button type="button" class="btn btn-primary" ng-click="vm.addProduct()">Agregar producto</button>
+<button type="button" class="btn btn-primary" ng-click="vm.itemPush()">Agregar producto</button>
 {{vm.cart}}
