--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
 
 	<script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -11,6 +12,8 @@
 
 	<script type="text/javascript" src="index_module.js"></script>
 	<script type="text/javascript" src="index_config.js"></script>
+
+	<link rel="stylesheet" href="w3/directive/cart/cart.css">
 
 	<script type="text/javascript" src="w3/directive/cart/cart_module.js"></script>
 	<script type="text/javascript" src="w3/directive/cart/cart_directive.js"></script>
