--- a/w3/directive/cart/cart.html
+++ b/w3/directive/cart/cart.html
@@ -1,4 +1,6 @@
-<button type="button" class="btn btn-primary" ng-click="vm.openCart()">Abrir carrito</button>
-<button type="button" class="btn btn-primary" ng-click="vm.deleteCart()">Eliminar carrito</button>
 <button type="button" class="btn btn-primary" ng-click="vm.itemPush()">Agregar producto</button>
-{{vm.cart}}
+<div class="row" ng-repeat="x in vm.cart.product">
+    <div class="col">
+        {{x.description}} <i class="fa fa-minus-square-o" ng-click="vm.itemPop(x.id)"></i>
+    </div>
+</div>
